include/livesplit_core.h

struct Segment_s;
typedef struct Segment_s *restrict Segment;
typedef struct Segment_s *restrict SegmentRefMut;
typedef struct Segment_s const* SegmentRef;
struct SegmentHistory_s;
typedef struct SegmentHistory_s *restrict SegmentHistory;
typedef struct SegmentHistory_s *restrict SegmentHistoryRefMut;
typedef struct SegmentHistory_s const* SegmentHistoryRef;
struct SegmentHistoryElement_s;
typedef struct SegmentHistoryElement_s *restrict SegmentHistoryElement;
typedef struct SegmentHistoryElement_s *restrict SegmentHistoryElementRefMut;
typedef struct SegmentHistoryElement_s const* SegmentHistoryElementRef;
struct SegmentHistoryIter_s;
typedef struct SegmentHistoryIter_s *restrict SegmentHistoryIter;
typedef struct SegmentHistoryIter_s *restrict SegmentHistoryIterRefMut;
typedef struct SegmentHistoryIter_s const* SegmentHistoryIterRef;
struct Time_s;
typedef struct Time_s *restrict Time;
typedef struct Time_s const* TimeRef;
/**
Creates a new Segment with the name given.
*/
Segment Segment_new(char const* name);
/**
Frees the object, allowing it to clean up all of its memory. You need
to call this for every object that you don't use anymore and hasn't
already been freed.
*/
void Segment_drop(Segment self);
/**
Accesses the name of the segment.
*/
char const* Segment_name(SegmentRef self);
/**
Accesses the icon of the segment encoded as a Data URL storing the image's
data. If the image's data is empty, this returns an empty string instead of
a URL.
*/
char const* Segment_icon(SegmentRef self);
/**
Accesses the specified comparison's time. If there's none for this
comparison, an empty time is being returned (but not stored in the
segment).
*/
TimeRef Segment_comparison(SegmentRef self, char const* comparison);
/**
Accesses the split time of the Personal Best for this segment. If it
doesn't exist, an empty time is returned.
*/
TimeRef Segment_personal_best_split_time(SegmentRef self);
/**
Accesses the Best Segment Time.
*/
TimeRef Segment_best_segment_time(SegmentRef self);
/**
Accesses the Segment History of this segment.
*/
SegmentHistoryRef Segment_segment_history(SegmentRef self);
/**
Iterates over all the segment times and their indices.
*/
SegmentHistoryIter SegmentHistory_iter(SegmentHistoryRef self);
/**
Accesses the index of the segment history element.
*/
int32_t SegmentHistoryElement_index(SegmentHistoryElementRef self);
/**
Accesses the segment time of the segment history element.
*/
TimeRef SegmentHistoryElement_time(SegmentHistoryElementRef self);
/**
Frees the object, allowing it to clean up all of its memory. You need
to call this for every object that you don't use anymore and hasn't
already been freed.
*/
void SegmentHistoryIter_drop(SegmentHistoryIter self);
/**
Accesses the next Segment History element. Returns NULL if there are no
more elements.
*/
SegmentHistoryElementRef SegmentHistoryIter_next(SegmentHistoryIterRefMut self);